# scriptsbots

./: .gitignore  CMakeLists.txt
include/: Agent.h  AssemblyBrain.h  DWRAONBrain.h  GLView.h  Helpers.h  MLPBrain.h  Settings.h  View.h  World.h
src/: Agent.cpp  AssemblyBrain.cpp  DWRAONBrain.cpp  GLView.cpp  MLPBrain.cpp  World.cpp  main.cpp
